modifications to dropdowns, improvements to feature images on each onboarding page

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
   cursor: pointer;
   border-radius: 50%;
   border: 1px solid transparent;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.33);
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, .33);
   background-repeat: no-repeat;
   background-position: center;
   text-align: center;
@@ -40,11 +40,10 @@
   transition: all 0.3s ease;
 }
 .custom-radios input[type="radio"]#color-green-1 + label span {
-  border: 1px solid #C4DB81;
-  background-color: transparent;
+  background-color: #C4DB81;
 }
 .custom-radios input[type="radio"]#color-yellow-1 + label span {
-  background-color: #FDCF49;
+  background-color: #FDC966;
 }
 .custom-radios input[type="radio"]#color-red-1 + label span {
   background-color: #EF6752;
@@ -54,7 +53,7 @@
   background-color: #C4DB81;
 }
 .custom-radios input[type="radio"]#color-yellow-2 + label span {
-  background-color: #FDCF49;
+  background-color: #FDC966;
 }
 .custom-radios input[type="radio"]#color-red-2 + label span {
   background-color: #EF6752;
@@ -64,7 +63,7 @@
   background-color: #C4DB81;
 }
 .custom-radios input[type="radio"]#color-yellow-3 + label span {
-  background-color: #FDCF49;
+  background-color: #FDC966;
 }
 .custom-radios input[type="radio"]#color-red-3 + label span {
   background-color: #EF6752;
@@ -74,7 +73,7 @@
   background-color: #C4DB81;
 }
 .custom-radios input[type="radio"]#color-yellow-4 + label span {
-  background-color: #FDCF49;
+  background-color: #FDC966;
 }
 .custom-radios input[type="radio"]#color-red-4 + label span {
   background-color: #EF6752;
@@ -84,7 +83,7 @@
   background-color: #C4DB81;
 }
 .custom-radios input[type="radio"]#color-yellow-5 + label span {
-  background-color: #FDCF49;
+  background-color: #FDC966;
 }
 .custom-radios input[type="radio"]#color-red-5 + label span {
   background-color: #EF6752;
@@ -94,7 +93,7 @@
   background-color: #C4DB81;
 }
 .custom-radios input[type="radio"]#color-yellow-6 + label span {
-  background-color: #FDCF49;
+  background-color: #FDC966;
 }
 .custom-radios input[type="radio"]#color-red-6 + label span {
   background-color: #EF6752;
@@ -141,7 +140,7 @@ p {
 }
 
 #logo {
-  position: fixed;
+  position: absolute;
   z-index: 10;
   padding-top:15px;
   padding-left:10px;
