--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,25 +1,36 @@
 {% extends 'base.html' %}
 {% block content %}
-<br>
-<br>
+<div class='container-fluid' id='feature' style="background-image: url(static/Super-robot2.png)">
 
-<div class='container-fluid' align="center" style="height:100px;">
-<h2 id="habot-txt"></h2>
+    <div id='logo'>
+      <img src="/static/logo-white.png" height="61px" width="190px"></img>
+    </div>
+
+<div class='row' id='feature-overlay'>
+    <div class='col-lg' align='center'>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <span class='align-text-bottom'><h2 id="habot-txt" align='center'></h2></span>
+    </div>
 </div>
 
-<b4>
+</div>
+
+<br>
 
 <div class='container-fluid' align="center">
 <h3>Your habit:</h3>
 <h3>{{ user_habit.habit.title }}</h3>
 </div>
-<b4>
+<br>
 
 <div class='container-fluid' align='center'>
 <div id="chart"></div>
 </div>
 
-<br>
 <br>
 
 <div class='container-fluid' align='center'>
