--- a/templates/name.html
+++ b/templates/name.html
@@ -22,7 +22,7 @@
 
 <div class='container-fluid' align='center'>
 <form action='/factors' method='GET'>
-    <input type='text' name='name'>
+    <input type='text' class="form-control" name='name'>
     <br>
     <br>
     <input type='submit' class="btn btn-outline-dark" value='thats me!'>
