--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -1,15 +1,24 @@
 {% extends 'base.html' %}
 {% block content %}
-<br>
-<br>
+<div class='container-fluid' id='feature' style="background-image: url(static/super-robot3.png)">
 
+    <div id='logo'>
+      <img src="/static/logo-white.png" height="61px" width="190px"></img>
+    </div>
 
-<div class='container-fluid' align="center" style="height:200px;">
-<h2 id="habot-txt"></h2>
+<div class='row' id='feature-overlay'>
+    <div class='col-lg' align='center'>
+        <br>
+        <br>
+        <br>
+        <span class='align-text-bottom'><h2 id="habot-txt" align='center'></h2></span>
+    </div>
 </div>
+
+</div>
+
 <br>
-<br>
-<br>
+
 <div class='container-fluid' align="center">
 <a href="/dashboard">your dashboard</a>
     </div>
@@ -22,7 +31,7 @@
 <script>
 
 $('#habot-txt').typeIt({
-    strings: ["You're going to be great!", "I'll be texting you soon.", "In the meantime, check out your dashboard to help track your 3-day streaks."],
+    strings: ["You're going to be great!", "I'll be texting you soon.", "In the meantime", "check out your sweet new dashboard!"],
     speed: 50,
     autoStart: false
 });
