final polishes on V1 front end - text boxes, drop downs, pictures, text and dashboard D3

--- a/templates/base.html
+++ b/templates/base.html
@@ -107,6 +107,11 @@ input.habit {
   width: 200px;
   height: 200px;
   white-space: normal;
+  margin: 5px;
+}
+
+#timezones {
+  margin: 5px;
 }
 
 #habit-tile {
@@ -124,14 +129,13 @@ p {
 #feature {
   background-size: cover;
   background: center center;
-  height: 250px;
+  height: 300px;
 }
 
 
-
 #feature-overlay {
-  background: rgba(0, 255, 252, 0.65);
-  height: 250px;
+  background: rgba(104, 12, 232, 0.65);
+  height: 300px;
 }
 
 
@@ -144,6 +148,10 @@ p {
   z-index: 10;
   padding-top:15px;
   padding-left:10px;
+}
+
+.form-inline {
+    text-align: center;
 }
 
 </style>
