--- a/templates/confirm.html
+++ b/templates/confirm.html
@@ -11,6 +11,8 @@
         <br>
         <br>
         <br>
+        <br>
+        <br>
         <span class='align-text-bottom'><h2 id="habot-txt" align='center'></h2></span>
     </div>
 </div>
@@ -31,7 +33,7 @@
 <script>
 
 $('#habot-txt').typeIt({
-    strings: ["You're going to be great!", "I'll be texting you soon.", "In the meantime", "check out your sweet new dashboard!"],
+    strings: ["You're going to be great!", "While you wait for my texts,", "check out your sweet new dashboard!"],
     speed: 50,
     autoStart: false
 });
