--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -13,6 +13,8 @@
         <br>
         <br>
         <br>
+        <br>
+        <br>
         <span class='align-text-bottom'><h2 id="habot-txt" align='center'></h2></span>
     </div>
 </div>
@@ -22,6 +24,7 @@
 <br>
 
 <div class='container-fluid' align="center">
+<br>
     <form action='/verify', method='GET'>
             <div class='col-6 center-block' align='center'>
                 <select class="form-control" name="country_code">
@@ -36,11 +39,11 @@
             <br>
 
             <div class='col-6 center-block' align='center'>
-                <input type='text' class="form-control" name='mobile'>
+                <input type='text' class="form-control" name='mobile' placeholder='your mobile number'>
             </div>
             <br>
             <div class='col-6 center-block' align='center'>
-                <input type='submit' class="btn btn-outline-dark" value='Lets do this!'>
+                <input type='submit' class="btn btn-outline-dark btn-large" value='Lets do this!'>
             </div>
     </form>
 </div>
@@ -59,7 +62,7 @@
 
         <div class="col-sm" align="center">
         <b>Find Habits</b><br>
-        I'll recommend micro-habits based on what's going on in your life.  Micro-habits are something specific you can do in 30 seconds or less.  
+        I'll recommend tiny habits based on what's going on in your life.  Tiny habit are something specific you can do in 30 seconds or less.  
         </div>
 
         <div class="col-sm" align="center">
@@ -77,10 +80,9 @@
 
 <br>
 <br>
-<br>
 
 <div class='container-fluid' align="center">
-<a href="/habits">see all micro-habits</a>
+<a href="/habits">see all tiny habits</a>
 </div>
 
 
