--- a/templates/name.html
+++ b/templates/name.html
@@ -12,6 +12,9 @@
         <br>
         <br>
         <br>
+        <br>
+        <br>
+        <br>
         <span class='align-text-bottom'><h2 id="habot-txt" align='center'></h2></span>
     </div>
 </div>
@@ -21,9 +24,11 @@
 <br>
 
 <div class='container-fluid' align='center'>
+<br>
 <form action='/factors' method='GET'>
-    <input type='text' class="form-control" name='name'>
-    <br>
+    <div class='col-6 center-block' align='center'>
+        <input type='text' class="form-control" name='name' placeholder='your name'>
+    </div>
     <br>
     <input type='submit' class="btn btn-outline-dark" value='thats me!'>
 </form>
