--- a/templates/verification.html
+++ b/templates/verification.html
@@ -13,6 +13,8 @@
         <br>
         <br>
         <br>
+        <br>
+        <br>
         <span class='align-text-bottom'><h2 id="habot-txt" align='center'></h2></span>
     </div>
 </div>
@@ -33,7 +35,7 @@
 <br>
 <form action='/signin', method='GET'>
     <div class='col-6 center-block' align='center'>
-        <input type='text' class="form-control"  name='code'>
+        <input type='text' class="form-control"  name='code' placeholder='verification code'>
     </div>
     <br>
     <input type='submit' class="btn btn-outline-dark" value='Verify me!'>
