--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -56,7 +56,7 @@
 
 <br>
 <br>
-
+<br>
 <div class='container-fluid'>
     <div class="row">
 
@@ -72,12 +72,13 @@
 
         <div class="col-sm" align="center">
         <b>Create New Behaviors</b><br>
-        Creating a habit takes about 21 days. Because consistency is key, I track every '3-day streak' you have and help you reach at least 7. Let's do this!  
+        Creating a habit takes about 21 days. Because consistency is key, I track every '3-day streak' you have and help you reach at least 7.
         </div>
 
     </div>
 </div>
 
+<br>
 <br>
 <br>
 
